--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,42 @@
-flask
-
-flask-sqlalchemy
-Flask-WTF
-flask-migrate
-PyJWT
-Flask-RESTful
-
-gunicorn
-
-pytest
-pytest-flask
-pytest-cov
+alembic==1.4.3
+appdirs==1.4.4
+attrs==20.2.0
+autopep8==1.5.4
+bcrypt==3.2.0
+certifi==2020.6.20
+cffi==1.14.3
+click==7.1.2
+coverage==5.3
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+gunicorn==20.0.4
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+packaging==20.4
+pipenv==2020.8.13
+pluggy==0.13.1
+py==1.9.0
+pycodestyle==2.6.0
+pycparser==2.20
+PyJWT==1.7.1
+pyparsing==2.4.7
+pytest==6.1.1
+pytest-cov==2.10.1
+pytest-flask==1.0.0
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.3.20
+toml==0.10.1
+virtualenv==20.1.0
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
+WTForms==2.3.3
